# Aeroponic-Garden-System

./: README.md
field_controller/: .gitignore  CMakeLists.txt  app.overlay  prj.conf  thingy53_nrf5340_cpuapp_ns.overlay
field_controller/bme688_module/zephyr/: CMakeLists.txt  bme688.c  bme688.h
field_controller/edge-impulse-sdk/classifier/: ei_classifier_smooth.h
field_controller/edge-impulse-sdk/classifier/inferencing_engines/: tensorrt.h
field_controller/edge-impulse-sdk/porting/: ei_classifier_porting.h
field_controller/edge_impulse_scripts/: collector.py
field_controller/include/: classifier.hpp  controllers.hpp  gpio.hpp  helpers.hpp  sensors.hpp  zigbee.hpp
field_controller/include/config/: hardware.hpp  software.hpp  zigbee.hpp
field_controller/include/types/: controllers_types.hpp  inference_types.hpp  zigbee_types.hpp
field_controller/include/zigbee/: c_defines.hpp
field_controller/model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
field_controller/src/: classifier.cpp  controllers.cpp  gpio.cpp  helpers.cpp  main.cpp  sensors.cpp  zigbee.cpp
field_controller/src/zigbee/: config.hpp  zboss_api_hell.hpp  zboss_api_hell_inputs.hpp  zigbee.cpp
field_controller/tflite-model/: trained_model_compiled.cpp  trained_model_compiled.h
pi_shield/: pi_shield.kicad_pcb  pi_shield.kicad_pro  pi_shield.kicad_sch
rt_sensor_reader/: platformio.ini
scripts/: pair.sh
stl/: funnel.stl  heater_bottom_1.stl  heater_bottom_2.stl  heater_bottom_3.stl  heater_bottom_4.stl  heater_top_1.stl  heater_top_2.stl  heater_top_3.stl  top_hat.stl  (+12 more)
(+73 files in other folders)
